--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "expo-system-ui": "~3.0.7",
     "i18next": "^23.14.0",
     "lodash.memoize": "^4.1.2",
+    "lottie-react-native": "6.7.0",
     "moti": "^0.29.0",
     "nativewind": "4.0.36",
     "react": "18.2.0",
